# google-re2-stubs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/re2-stubs/: __init__.pyi
tests/api/: __init__.py  example.py  test_typing.py
